update title and address, on progress icon and time

--- a/app/src/main/res/layout/fragment_accident_list.xml
+++ b/app/src/main/res/layout/fragment_accident_list.xml
@@ -18,7 +18,7 @@
             android:id="@+id/recyclerIncident"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/item_row">
+            tools:listitem="@layout/item_holder_incident">
 
         </android.support.v7.widget.RecyclerView>
 
