--- a/app/src/main/res/layout/item_holder_incident.xml
+++ b/app/src/main/res/layout/item_holder_incident.xml
@@ -6,6 +6,9 @@
         <variable
             name="accidentDetailVM"
             type="com.catnip.bikecident.model.accident.IncidentDetail" />
+        <variable
+            name="mediaVM"
+            type="com.catnip.bikecident.model.accident.Media" />
     </data>
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
@@ -26,55 +29,70 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/item_accident_img"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/icon_accident"
-                    android:contentDescription="icon_type"
-                    android:layout_gravity="center_vertical"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    tools:background="@color/colorAccent"
+                    bind:imageIncident="@{accidentDetailVM.media.imageUrlThumb}"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
-                    <TextView
-                        android:id="@+id/txt_item_incident_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_centerVertical="true"
-                        android:text="@{accidentDetailVM.title}"
-                        android:textStyle="bold"
-                        android:textSize="16sp"
-                        android:paddingTop="2dp"
-                        android:paddingBottom="2dp"
-                        tools:text="Stolen 2019 EZ Pedaler Foldable(silver, gray or bare metal)"/>
+                    <ImageView
+                        android:id="@+id/item_accident_img"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_margin="10dp"
+                        android:src="@drawable/icon_accident"
+                        android:contentDescription="icon_type"
+                        android:layout_gravity="center_vertical"/>
 
-                    <TextView
-                        android:id="@+id/txt_item_incident_address"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_centerVertical="true"
-                        android:text="@{accidentDetailVM.address}"
-                        tools:text="North Hollywood, CA, 91601"/>
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/txt_item_incident_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_centerVertical="true"
-                        android:text="@{accidentDetailVM.occurredAt}"
-                        tools:text="Time: format (27 March 2019, 19:00 AM)"
-                        android:paddingBottom="2dp"/>
+                        <TextView
+                            android:id="@+id/txt_item_incident_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_centerVertical="true"
+                            android:text="@{accidentDetailVM.title}"
+                            android:textStyle="bold"
+                            android:textSize="16sp"
+                            android:paddingTop="2dp"
+                            android:paddingBottom="2dp"
+                            tools:text="Stolen 2019 EZ Pedaler Foldable(silver, gray or bare metal)"/>
+
+                        <TextView
+                            android:id="@+id/txt_item_incident_address"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_centerVertical="true"
+                            android:text="@{accidentDetailVM.address}"
+                            tools:text="North Hollywood, CA, 91601"/>
+
+                        <TextView
+                            android:id="@+id/txt_item_incident_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_centerVertical="true"
+                            android:text="@{accidentDetailVM.occurredAt}"
+                            tools:text="Time: format (27 March 2019, 19:00 AM)"
+                            android:paddingBottom="2dp"/>
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
+
 
             </LinearLayout>
 
